--- a/app/src/main/res/layout/activity_driver_map.xml
+++ b/app/src/main/res/layout/activity_driver_map.xml
@@ -79,25 +79,40 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/black">
-
-            <Button
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/logout"
-                android:text="Logout"
-                android:textColor="@color/black"
-                android:background="@drawable/round_button"
-                android:backgroundTint="@color/white"/>
+                android:id="@+id/driverButtons" >
+                <Button
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/logout"
+                    android:text="Logout"
+                    android:textColor="@color/black"
+                    android:background="@drawable/round_button"
+                    android:backgroundTint="@color/white"/>
+                <Button
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/driverHistoy"
+                    android:text="History"
+                    android:textColor="@color/black"
+                    android:background="@drawable/round_button"
+                    android:backgroundTint="@color/white"/>
+                <Button
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/DriverSettings"
+                    android:text="Settings"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/black"
+                    android:background="@drawable/round_button"
+                    android:backgroundTint="@color/white"/>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/DriverSettings"
-                android:text="Settings"
-                android:layout_alignParentRight="true"
-                android:textColor="@color/black"
-                android:background="@drawable/round_button"
-                android:backgroundTint="@color/white"/>
+            </LinearLayout>
 
         </RelativeLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
