Added payment with Stripe and other payment options available with PayPal and Revolut

--- a/app/src/main/res/layout/activity_customer_map.xml
+++ b/app/src/main/res/layout/activity_customer_map.xml
@@ -41,8 +41,8 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/customerHistory"
-                    android:text="@string/history"
+                    android:id="@+id/customerPayment"
+                    android:text="@string/pay"
                     android:textColor="@color/black"
                     android:background="@drawable/round_button"
                     android:backgroundTint="@color/white"
