--- a/app/src/main/res/layout/activity_customers_settings.xml
+++ b/app/src/main/res/layout/activity_customers_settings.xml
@@ -37,6 +37,11 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/customerHistoryButton"
+        android:text="History"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/Back"
         android:text="Back"/>
 
