--- a/app/src/main/res/layout/activity_customer_map.xml
+++ b/app/src/main/res/layout/activity_customer_map.xml
@@ -21,11 +21,12 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/black">
+            android:background="@color/jetBlack">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/customerButtons" >
+                android:id="@+id/customerButtons"
+                android:layout_marginTop="12dp">
                 <Button
                     android:layout_weight="1"
                     android:layout_width="0dp"
@@ -86,9 +87,10 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/DriverInfo"
                 android:layout_gravity="bottom"
+                android:layout_marginBottom="8dp"
                 android:orientation="horizontal"
-                android:background="@android:color/white"
-                android:visibility="gone">
+                android:background="@drawable/edit_text_border_new"
+                android:visibility="visible">
                 <ImageView
                     android:layout_width="100sp"
                     android:layout_height="100sp"
@@ -126,7 +128,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@color/white">
+                android:background="@drawable/edit_text_border_new">
                 <RadioGroup
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
