--- a/app/src/main/res/layout/activity_customers_settings.xml
+++ b/app/src/main/res/layout/activity_customers_settings.xml
@@ -4,45 +4,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CustomersSettingsActivity"
+    android:background="@drawable/taxiimagepng"
     android:orientation="vertical"
-    android:padding="20sp">
+    android:padding="20sp"
+    tools:context=".CustomersSettingsActivity">
 
     <ImageView
+        android:id="@+id/ProfileImage"
         android:layout_width="100sp"
         android:layout_height="100sp"
-        android:id="@+id/ProfileImage"
-        android:src="@drawable/user"
-        android:layout_marginBottom="10sp"/>
+        android:layout_marginBottom="10sp"
+        android:src="@drawable/user2"/>
+
     <EditText
         android:id="@+id/Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
+        android:layout_marginBottom="20sp"
+        android:background="@drawable/edit_text_border_new"
+        android:drawableStart="@drawable/custom_person_icon"
+        android:drawablePadding="12dp"
+        android:padding="10dp"
         android:hint="Name"
-        android:layout_marginBottom="20sp"/>
+        android:textColor="@color/jetBlack"
+        android:textColorHint="@color/black"
+        android:layout_marginTop="10dp"/>
+
     <EditText
         android:id="@+id/Phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
-        android:hint="Phone Number"
         android:layout_marginBottom="20sp"
-        android:inputType="number"/>
+        android:background="@drawable/edit_text_border_new"
+        android:drawableStart="@drawable/custom_phone_icon"
+        android:drawablePadding="12dp"
+        android:padding="10dp"
+        android:hint="Phone Number"
+        android:inputType="number"
+        android:textColor="@color/jetBlack"
+        android:textColorHighlight="@color/jetBlack"
+        android:textColorHint="@color/black"
+        android:textColorLink="@color/jetBlack"
+        android:layout_marginTop="10dp"/>
+
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/Confirm"
-        android:text="Confirm"/>
-    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Confirm"
+        android:textColor="@color/black"
+        android:background="@drawable/round_button"
+        android:backgroundTint="@color/white"
+        android:layout_marginTop="20dp"/>
+
+    <Button
         android:id="@+id/customerHistoryButton"
-        android:text="History"/>
-    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="History"
+        android:textColor="@color/black"
+        android:background="@drawable/round_button"
+        android:backgroundTint="@color/white"
+        android:layout_marginTop="20dp"/>
+
+    <Button
         android:id="@+id/Back"
-        android:text="Back"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:textColor="@color/black"
+        android:background="@drawable/round_button"
+        android:backgroundTint="@color/white"
+        android:layout_marginTop="20dp"/>
 
 </LinearLayout>
