--- a/app/src/main/res/layout/activity_rider_login.xml
+++ b/app/src/main/res/layout/activity_rider_login.xml
@@ -14,13 +14,14 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/edit_text_border_new"
+        android:drawableStart="@drawable/ic_email"
+        android:drawablePadding="12dp"
+        android:padding="10dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/white"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/lightGrey"
-        android:textColorLink="@color/white"
+        android:textColor="@color/jetBlack"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -33,12 +34,13 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/edit_text_border_new"
+        android:drawableStart="@drawable/ic_password"
+        android:drawablePadding="12dp"
+        android:padding="10dp"
         android:hint="Password"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/white"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/lightGrey"
-        android:textColorLink="@color/white"
+        android:textColor="@color/jetBlack"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
