--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="lighterGrey">#ECECEC</color>
     <color name="white">#FFFFFF</color>
     <color name="jetBlack">#0E0E10</color>
+    <color name="turquoise">#30D5C8</color>
 </resources>
