--- a/app/src/main/res/layout/activity_driver_login.xml
+++ b/app/src/main/res/layout/activity_driver_login.xml
@@ -14,13 +14,14 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/edit_text_border_new"
+        android:drawableStart="@drawable/custom_email_icon"
+        android:drawablePadding="12dp"
+        android:padding="10dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/white"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/lightGrey"
-        android:textColorLink="@color/white"
+        android:textColor="@color/jetBlack"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -33,12 +34,13 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/edit_text_border_new"
+        android:drawableStart="@drawable/custom_password_icon"
+        android:drawablePadding="12dp"
+        android:padding="10dp"
         android:hint="Password"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/white"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/lightGrey"
-        android:textColorLink="@color/white"
+        android:textColor="@color/jetBlack"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -53,7 +55,6 @@
         android:text="Login"
         android:textColor="@color/black"
         android:background="@drawable/round_button"
-        android:backgroundTint="@color/white"
         android:theme="@style/Button.White"
         app:layout_constraintBottom_toTopOf="@+id/registration"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,8 +70,6 @@
         android:text="Register"
         android:textColor="@color/black"
         android:background="@drawable/round_button"
-        android:backgroundTint="@color/white"
-        android:theme="@style/Button.White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
