--- a/app/src/main/res/layout/activity_rate_driver.xml
+++ b/app/src/main/res/layout/activity_rate_driver.xml
@@ -16,8 +16,8 @@
         android:layout_marginEnd="8dp"
         android:isIndicator="false"
         android:numStars="5"
-        android:progressBackgroundTint="@color/jetBlack"
-        android:progressTint="@color/white"
+        android:progressBackgroundTint="@color/white"
+        android:progressTint="@color/gold"
         android:rating="2.5"
         android:stepSize="0.5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,6 @@
         android:layout_marginTop="260dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/round_button"
-        android:backgroundTint="@color/white"
         android:text="FINISH"
         android:textColor="@color/jetBlack"
         app:layout_constraintEnd_toEndOf="parent"
