--- a/app/src/main/res/layout/activity_customer_payment.xml
+++ b/app/src/main/res/layout/activity_customer_payment.xml
@@ -15,7 +15,6 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/round_button"
-        android:backgroundTint="@color/white"
         android:text="PAY WITH CARD"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,49 +61,58 @@
         app:layout_constraintTop_toBottomOf="@+id/tvPayDriver"
         app:srcCompat="@drawable/creditcard" />
 
-    <ImageButton
-        android:id="@+id/btnPayWithPayPal"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/paypalbtn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvOtheroptions"
-        app:layout_constraintVertical_bias="0.067" />
-
-    <ImageButton
-        android:id="@+id/btnPayWithRevolut"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/revolutbtn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnPayWithPayPal"
-        app:layout_constraintVertical_bias="0.113" />
-
     <Button
         android:id="@+id/btnContinueToRating"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/round_button"
-        android:backgroundTint="@color/white"
         android:text="CONTINUE"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnPayWithRevolut" />
+
+    <Button
+        android:id="@+id/btnPayWithPayPal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/custom_paypal_btn"
+        android:drawableStart="@drawable/ic_paypal_logo_2014"
+        android:drawableLeft="@drawable/ic_paypal_logo_2014"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:text="PAY WITH PAYPAL"
+        android:textColor="@color/jetBlack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvOtheroptions" />
+
+    <Button
+        android:id="@+id/btnPayWithRevolut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/custom_revolut_btn"
+        android:drawableStart="@drawable/ic_revolut"
+        android:drawableLeft="@drawable/ic_revolut"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:text="PAY WITH REVOLUT"
+        android:textColor="@color/jetBlack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnPayWithPayPal" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
