--- a/app/src/main/res/layout/activity_rider_login.xml
+++ b/app/src/main/res/layout/activity_rider_login.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/edit_text_border_new"
-        android:drawableStart="@drawable/ic_email"
+        android:drawableStart="@drawable/custom_email_icon"
         android:drawablePadding="12dp"
         android:padding="10dp"
         android:hint="Email"
@@ -35,7 +35,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/edit_text_border_new"
-        android:drawableStart="@drawable/ic_password"
+        android:drawableStart="@drawable/custom_password_icon"
         android:drawablePadding="12dp"
         android:padding="10dp"
         android:hint="Password"
@@ -55,7 +55,6 @@
         android:text="Login"
         android:textColor="@color/black"
         android:background="@drawable/round_button"
-        android:backgroundTint="@color/white"
         android:theme="@style/Button.White"
         app:layout_constraintBottom_toTopOf="@+id/registration"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,8 +70,6 @@
         android:text="Register"
         android:textColor="@color/black"
         android:background="@drawable/round_button"
-        android:backgroundTint="@color/white"
-        android:theme="@style/Button.White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
