--- a/app/src/main/res/layout/activity_rate_driver.xml
+++ b/app/src/main/res/layout/activity_rate_driver.xml
@@ -54,24 +54,24 @@
         app:layout_constraintTop_toBottomOf="@+id/starRating" />
 
     <EditText
-        android:id="@+id/etRatingMessage"
+        android:id="@+id/etRatingFeedback"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="32dp"
-        android:hint="Leave a message"
         android:background="@drawable/edit_text_border_new"
-        android:textColor="@color/jetBlack"
-        android:textColorHint="@color/black"
         android:gravity="top"
-        android:padding="10dp"
+        android:hint="Leave some feedback..."
         android:inputType="textMultiLine"
         android:lines="5"
         android:overScrollMode="always"
+        android:padding="10dp"
         android:scrollbarStyle="insideInset"
         android:scrollbars="vertical"
         android:scrollHorizontally="false"
+        android:textColor="@color/jetBlack"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
